Thu May 26 13:48:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Sequence_Unit_Tests/Bounded_Simple_Types.cpp:
        * tests/Sequence_Unit_Tests/Bounded_String.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_Octet.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_Simple_Types.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_String.cpp:
          Catch uncaught exceptions in main.

Thu May 26 13:11:19 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tao/Generic_Sequence_T.h:
          Added file name to doxygen documentation

        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
          Resolved Coverity warning: catching a uncaught BAD_PARAM exception.

Fri May 20 22:07:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tao/AnyTypeCode/TAO_AnyTypeCode.rc:
        * tao/Codeset/TAO_Codeset.rc:
        * tao/PI/TAO_PI.rc:
        * tao/PI_Server/TAO_PI_Server.rc:
        * tao/Utils/TAO_Utils.rc:
        * tao/ZIOP/TAO_ZIOP.rc:

          Add resource files to get TAO version number on DLLs.

Fri May 20 14:20:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Oneway_Timeouts/test.mpc:
          Added explicit idl project to get correct build order on VMS

Thu May 19 14:53:55 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/QtTests/client.cpp:
        * tests/QtTests/client.h:
        * tests/QtTests/QtTests.mpc:
        * tests/QtTests/server.cpp:
        * tests/QtTests/test_i.h:
        Adapted to qt4.

Tue May 17 19:20:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Indirection/MessengerServer.cpp:
        * tests/Portable_Interceptors/Slot/driver.cpp:
          Catch exceptions in main

Tue May 17 11:32:18 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface/interface_ss.cpp:
        * TAO_IDL/be/be_visitor_operation/direct_proxy_impl_ss.cpp:
          Layout changes to the generated code
